--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
 
   <body>
+    <aside>
     <div class="container-one">
       <div class="text">
         <p>My balance</p>
@@ -36,7 +37,8 @@
         <div class="circle-two"></div>
       </div>
     </div>
-
+    </aside>
+    <main>
     <div class="container-two">
       <h1>Spending - Last 7 days</h1>
       <div class="chart-container">
@@ -57,7 +59,7 @@
         </div>
       </div>
     </div>
-
+    </main>
     <footer>
       <div class="attribution">
         Challenge by
