--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -26,7 +24,7 @@
   </head>
 
   <body>
-    <aside>
+    
     <div class="container-one">
       <div class="text">
         <p>My balance</p>
@@ -37,8 +35,8 @@
         <div class="circle-two"></div>
       </div>
     </div>
-    </aside>
-    <main>
+   
+    <main role="main">
     <div class="container-two">
       <h1>Spending - Last 7 days</h1>
       <div class="chart-container">
@@ -60,7 +58,7 @@
       </div>
     </div>
     </main>
-    <footer>
+    <footer role="contentinfo">
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
