--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    
+    <header role="banner">
     <div class="container-one">
       <div class="text">
         <p>My balance</p>
@@ -35,6 +35,7 @@
         <div class="circle-two"></div>
       </div>
     </div>
+    </header>
    
     <main role="main">
     <div class="container-two">
@@ -58,6 +59,7 @@
       </div>
     </div>
     </main>
+    
     <footer role="contentinfo">
       <div class="attribution">
         Challenge by
