--- a/index.html
+++ b/index.html
@@ -24,40 +24,40 @@
   </head>
 
   <body>
-    <header role="banner">
-    <div class="container-one">
-      <div class="text">
-        <p>My balance</p>
-        <h1>$921.48</h1>
+     <header role="banner">
+      <div class="container-one">
+        <div class="text">
+          <p>My balance</p>
+          <div class="balance">$921.48</div>
+        </div>
+        <div class="shape">
+          <div class="circle-one"></div>
+          <div class="circle-two"></div>
+        </div>
       </div>
-      <div class="shape">
-        <div class="circle-one"></div>
-        <div class="circle-two"></div>
-      </div>
-    </div>
     </header>
-   
+
     <main role="main">
-    <div class="container-two">
-      <h1>Spending - Last 7 days</h1>
-      <div class="chart-container">
-        <table class="graph">
-          <tbody id="chart"></tbody>
-        </table>
-      </div>
-      <hr class="horizontal" />
-      <div class="summary">
-        <div class="sum-one">
-          <p>Total this month <span class="total">$478.33</span></p>
+      <div class="container-two">
+        <div class="title">Spending - Last 7 days</div>
+        <div class="chart-container">
+          <table class="graph">
+            <tbody id="chart"></tbody>
+          </table>
         </div>
-        <div class="sum-two">
-          <p>
-            <span class="percentage">+2.4%</span> <br />
-            from last month
-          </p>
+        <hr class="horizontal" />
+        <div class="summary">
+          <div class="sum-one">
+            <p>Total this month <span class="total">$478.33</span></p>
+          </div>
+          <div class="sum-two">
+            <p>
+              <span class="percentage">+2.4%</span> <br />
+              from last month
+            </p>
+          </div>
         </div>
       </div>
-    </div>
     </main>
     
     <footer role="contentinfo">
