--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-     <header role="banner">
+     <header>
       <div class="container-one">
         <div class="text">
           <p>My balance</p>
@@ -37,7 +37,7 @@
       </div>
     </header>
 
-    <main role="main">
+    <main>
       <div class="container-two">
         <div class="title">Spending - Last 7 days</div>
         <div class="chart-container">
@@ -60,7 +60,7 @@
       </div>
     </main>
     
-    <footer role="contentinfo">
+    <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
